添加统计图表的显示和相关api
