# lib/units/api/controllers/testing.js
@@ -13,6 +13,7 @@ var log = logger.createLogger('api:controllers:testing')
 module.exports = {
   getTestingList: getTestingList
 , getTestingReport: getTestingReport
+, getTestingChart: getTestingChart
 }
 
 function getTestingList(req, res) {
@@ -51,6 +52,32 @@ function getTestingReport(req, res) {
           res.json({
             success: true
             , reports: list
+          })
+        })
+    })
+    .catch(function(err) {
+      log.error('Failed to load device "%s": ', err.stack)
+      res.status(500).json({
+        success: false
+      })
+    })
+}
+
+function getTestingChart(req, res){
+  var name = req.swagger.params.name.value
+  var fields = req.swagger.params.fields.value
+  dbapi.loadTestingStat(name)
+    .then(function(cursor) {
+      return Promise.promisify(cursor.toArray, cursor)()
+        .then(function(list) {
+          console.log(list)
+          var stat = []
+          list.forEach(function(obj){
+            stat.push([obj.group,obj.reduction.length])
+          })
+          res.json({
+            success: true
+            , stat: stat
           })
         })
     })
