# lib/units/api/swagger/api_v1_generated.json
@@ -502,6 +502,52 @@
                 ]
             }
         },
+        "/testing/chart/{name}/": {
+            "x-swagger-router-controller": "testing",
+            "get": {
+                "summary": "Testing Chart Data",
+                "description": "The testing chart data info",
+                "operationId": "getTestingChart",
+                "tags": [
+                    "testing"
+                ],
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "path",
+                        "description": "chart name",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "fields",
+                        "in": "query",
+                        "description": "Fields query parameter takes a comma seperated list of fields. Only listed field will be return in response",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Testing Chart Data",
+                        "schema": {
+                            "$ref": "#/definitions/DeviceResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "Unexpected Error",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "accessTokenAuth": []
+                    }
+                ]
+            }
+        },
         "/swagger.json": {
             "x-swagger-pipe": "swagger_raw"
         }
